Basic request and response

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,3 +2,7 @@
   <input type="text" placeholder="A great idea" id="idea-text">
   <input type="submit" id="idea-submit">
 </div>
+
+<h2>Your amazing ideas</h2>
+
+<ol id="ideas"></ol>
