Good ideas, bad ideas

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,17 @@
-<div id="idea-input">
-  <input type="text" placeholder="A great idea" id="idea-text">
-  <input type="submit" id="idea-submit">
+<div id="good-idea-input">
+  <input type="text" placeholder="A great idea" id="good-idea-text">
+  <input type="submit" id="good-idea-submit">
 </div>
 
-<h2>Your amazing ideas</h2>
+<h2>Your good ideas</h2>
 
-<ol id="ideas"></ol>
+<ol id="good-ideas"></ol>
+
+<div id="bad-idea-input">
+  <input type="text" placeholder="A great idea" id="bad-idea-text">
+  <input type="submit" id="bad-idea-submit">
+</div>
+
+<h2>Your bad ideas</h2>
+
+<ol id="bad-ideas"></ol>
